--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.15.0",
     "mysql2": "^3.12.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.17"
